# compile-to-wasm-from-scratch-in-python

./: README.md  flake.nix  pyproject.toml  run.sh
examples/: arith.ctwfs  fib.ctwfs  if.ctwfs  mutual_recursion.ctwfs  sequence.ctwfs  shadowing.ctwfs  sum_to.ctwfs  unary.ctwfs
src/compile_to_wasm_from_scratch/: __init__.py  __main__.py  ast.py  compiler.py  ctwfs.gram  parser.py  scanner.py  symbol_table.py
