[project]
name = "compile-to-wasm-from-scratch"
version = "0.1.0"
description = "Add your description here"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"compile-to-wasm-from-scratch" = "compile_to_wasm_from_scratch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/compile_to_wasm_from_scratch"]
